# izmirOS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  boot.asm  boot2.asm  compile_commands.json  disk.img  i386.xml  kernel.c  kernel.cc  kernel.elf  linker.ld  loader.asm  loader.c  notes.txt  toolchain.cmake
.cache/clangd/index/: handlers.hpp.DB184DC82C950BCC.idx  idt.cpp.016FABC8F8E6B424.idx  idt.hpp.6305B55CBC6E29D7.idx  main.cpp.10D9AB886D04A4FA.idx  paging.cpp.B7889ECC11ED7EF4.idx  paging.hpp.70DDBB7489879ADA.idx  processes.cpp.5A49132F3F16CE14.idx  shell.hpp.AE6EFDBB0E81C7CF.idx  vga.cpp.9EE6F987C63EA850.idx  vga.hpp.F04F64AC8D5087DC.idx
boot/: boot.asm  kernel_entry.asm
boot/longmode/: switch.asm
boot/protectedmode/: gdt.asm  switch.asm
boot/realmode/: detect.asm  disk.asm  print.asm
include/interrupts/: handlers.hpp  idt.cpp  idt.hpp  isr.asm
include/kernel/dev/: vga.hpp
include/libhas/: array.hpp  type_traits.hpp
include/log/: log.hpp
include/paging/: paging.hpp
include/processes/: processes.hpp
include/shell/: shell.hpp
interrupts/: idt.asm  idt.cpp  notes.txt
src/arch/x64/: main.cpp
src/asm/: isr.asm  paging.asm
src/interrupts/: idt._cpp  idt.cpp
src/kernel/dev/: vga.cpp
src/paging/: paging.cpp
